fix nav button misalignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1371,6 +1371,7 @@ input, select, textarea {
 			padding-left: 0;
 			border: solid 1px #ffffff;
 			border-radius: 4px;
+			box-sizing: content-box;
 		}
 
 			#header nav ul li {
